--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "August 23, 2024" "ugrep 6.5.0" "User Commands"
+.TH UGREP "1" "October 24, 2024" "ugrep 7.0.0" "User Commands"
 .SH NAME
 \fBugrep\fR, \fBug\fR -- file pattern searcher
 .SH SYNOPSIS
@@ -466,13 +466,14 @@ option \fB\-Z\fR and `\fB\-\-help\fR format' displays a list of \fB\-\-format\fR
 .TP
 \fB\-\-hexdump\fR[=[1\-8][a][bch][A[\fINUM\fR]][B[\fINUM\fR]][C[\fINUM\fR]]]
 Output matches in 1 to 8 columns of 8 hexadecimal octets.  The
-default is 2 columns or 16 octets per line.  Option `a' outputs a
+default is 2 columns or 16 octets per line.  Argument `a' outputs a
 `*' for all hex lines that are identical to the previous hex line,
 `b' removes all space breaks, `c' removes the character column, `h'
-removes hex spacing, `A' includes up to NUM hex lines after the
-match, `B' includes up to NUM hex lines before the match and `C'
-includes up to NUM hex lines.  When NUM is omitted, the matching
-line is included in the output.  See also options \fB\-U\fR, \fB\-W\fR and \fB\-X\fR.
+removes hex spacing, `A' includes up to NUM hex lines after a
+match, `B' includes up to NUM hex lines before a match and `C'
+includes up to NUM hex lines before and after a match.  Arguments
+`A', `B' and `C' are the same as options \fB\-A\fR, \fB\-B\fR and \fB\-C\fR when used
+with \fB\-\-hexdump\fR.  See also options \fB\-U\fR, \fB\-W\fR and \fB\-X\fR.
 .TP
 \fB\-\-hidden\fR, \fB\-.\fR
 Search hidden files and directories.
@@ -709,13 +710,13 @@ the default is 3 (300ms delay).  No whitespace may be given between
 \fB\-e\fR \fIPATTERN\fR, i.e. a PATTERN argument requires option \fB\-e\fR.  Press F1
 or CTRL\-Z to view the help screen.  Press F2 or CTRL\-Y to invoke a
 command to view or edit the file shown at the top of the screen.
-The command can be specified with option \fB\-\-view\fR, or defaults to
-environment variable PAGER when defined, or EDITOR.  Press Tab and
-Shift\-Tab to navigate directories and to select a file to search.
-Press Enter to select lines to output.  Press ALT\-l for option \fB\-l\fR
-to list files, ALT\-n for \fB\-n\fR, etc.  Non\-option commands include
-ALT\-] to increase context and ALT\-} to increase fuzzyness.  See
-also options \fB\-\-no\-confirm\fR, \fB\-\-delay\fR, \fB\-\-split\fR and \fB\-\-view\fR.
+The command can be specified with option \fB\-\-view\fR and defaults to
+environment variable PAGER when defined, or VISUAL or EDITOR.
+Press Tab or Shift\-Tab to navigate directories and to select a file
+to search.  Press Enter to select lines to output.  Press ALT\-l for
+option \fB\-l\fR to list files, ALT\-n for \fB\-n\fR, etc.  Non\-option commands
+include ALT\-] to increase context and ALT\-} to increase fuzzyness.
+See also options \fB\-\-no\-confirm\fR, \fB\-\-delay\fR, \fB\-\-split\fR and \fB\-\-view\fR.
 .TP
 \fB\-q\fR, \fB\-\-quiet\fR, \fB\-\-silent\fR
 Quiet mode: suppress all output.  Only search a file until a match
@@ -761,7 +762,7 @@ the specified FILE, but recursive config loading is not allowed.
 Use SEP as field separator between file name, line number, column
 number, byte offset and the matched line.  The default separator is
 a colon (`:') and a bar (`|') for multi\-line pattern matches, and a
-dash (`\-') for context lines.  See also \fB\-\-group\-separator\fR.
+dash (`\-') for context lines.  See also option \fB\-\-group\-separator\fR.
 .TP
 \fB\-\-split\fR
 Split the \fB\-Q\fR query TUI screen on startup.
@@ -850,9 +851,9 @@ Use COMMAND to view/edit a file in \fB\-Q\fR query TUI by pressing CTRL\-Y.
 .TP
 \fB\-W\fR, \fB\-\-with\-hex\fR
 Output binary matches in hexadecimal, leaving text matches alone.
-This option is equivalent to the \fB\-\-binary\-files\fR=with\-hex option
-with \fB\-\-hexdump\fR=2C.  To omit the matching line from the hex output,
-combine option \fB\-\-hexdump\fR with option \fB\-W\fR.  See also option \fB\-U\fR.
+This option is equivalent to the \fB\-\-binary\-files\fR=with\-hex option.
+To omit the matching line from the hex output, use both options \fB\-W\fR
+and \fB\-\-hexdump\fR.  See also options \fB\-U\fR.
 .TP
 \fB\-w\fR, \fB\-\-word\-regexp\fR
 The PATTERN is searched for as a word, such that the matching text
@@ -866,8 +867,8 @@ of the terminal window is used if NUM is not specified.  Note that
 double wide characters in the output may result in wider lines.
 .TP
 \fB\-X\fR, \fB\-\-hex\fR
-Output matches in hexadecimal.  This option is equivalent to the
-\fB\-\-binary\-files\fR=hex option with \fB\-\-hexdump\fR=2C.  To omit the matching
+Output matches and matching lines in hexadecimal.  This option is
+equivalent to the \fB\-\-binary\-files\fR=hex option.  To omit the matching
 line from the hex output use option \fB\-\-hexdump\fR.  See also option \fB\-U\fR.
 .TP
 \fB\-x\fR, \fB\-\-line\-regexp\fR
@@ -1142,6 +1143,10 @@ if option \fB-H\fR is used: \fITEXT\fR, the quoted pathname and separator, \\"
 and \\\\ replace " and \\.
 .IP \fB%h\fR
 the quoted file pathname, \\" and \\\\ replace " and \\.
+.IP \fB%[\fR\fITEXT\fR\fB]I\fR
+if option \fB-H\fR is used: \fITEXT\fR, the pathname as XML character data and separator.
+.IP \fB%i\fR
+the file pathname as XML character data.
 .IP \fB%[\fR\fITEXT\fR\fB]N\fR
 if option \fB-n\fR is used: \fITEXT\fR, the line number and separator.
 .IP \fB%n\fR
@@ -1265,8 +1270,8 @@ When present, the argument must be placed in \fB[]\fR brackets, for example
 \fB%[\fR\fISEP\fR\fB]$\fR and \fB%u\fR are switches and do not send anything to
 the output.
 .PP
-The separator used by the \fB%F\fR, \fB%H\fR, \fB%N\fR, \fB%K\fR, \fB%B\fR,
-\fB%S\fR and \fB%G\fR fields may be changed by preceding the field by
+The separator used by the \fB%F\fR, \fB%H\fR, \fB%I\fR, \fB%N\fR, \fB%K\fR,
+\fB%B\fR, \fB%S\fR and \fB%G\fR fields may be changed by preceding the field by
 \fB%[\fR\fISEP\fR\fB]$\fR.  When \fB[\fR\fISEP\fR\fB]\fR is not provided, this
 reverts the separator to the default separator or the separator specified with
 \fB--separator\fR.
