--- a/man/ug.1
+++ b/man/ug.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "October 27, 2024" "ugrep 7.0.2" "User Commands"
+.TH UGREP "1" "November 10, 2024" "ugrep 7.0.3" "User Commands"
 .SH NAME
 \fBugrep\fR, \fBug\fR -- file pattern searcher
 .SH SYNOPSIS
@@ -817,7 +817,7 @@ repeated.  The possible file types can be (\fB\-t\fRlist displays a list):
 .TP
 \fB\-\-tabs\fR[=\fINUM\fR]
 Set the tab size to NUM to expand tabs for option \fB\-k\fR.  The value of
-NUM may be 1, 2, 4, or 8.  The default tab size is 8.
+NUM may be 1 (no expansion), 2, 4, or 8.  The default size is 8.
 .TP
 \fB\-\-tag\fR[=\fITAG\fR[,\fIEND\fR]]
 Disables colors to mark up matches with TAG.  END marks the end of
