Add support for the Seed7 programming language files.
For more info on the Seed7 programming Language, see:

- on Wikipedia: https://en.wikipedia.org/wiki/Seed7
- Seed7 home:   https://seed7.sourceforge.net/
- Seed7 repo:   https://github.com/ThomasMertes/seed7

--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -57,7 +57,7 @@ one or more newline characters.
 .PP
 The empty pattern "" matches all lines.  Other empty-matching patterns do not.
 For example, the pattern `a*' will match one or more a's.  Option \fB-Y\fR
-forces empty matches for compatibility with other grep tools.  
+forces empty matches for compatibility with other grep tools.
 .PP
 Option \fB-f\fR \fIFILE\fR matches patterns specified in \fIFILE\fR.
 .PP
@@ -831,8 +831,8 @@ repeated.  The possible file types can be (\fB\-t\fRlist displays a list):
 `parrot', `pascal', `pdf', `Pdf', `perl', `Perl', `php',
 `Php', `png', `Png', `prolog', `python', `Python', `r',
 `rpm', `Rpm', `rst', `rtf', `Rtf', `ruby', `Ruby',
-`rust', `scala', `scheme', `shell', `Shell', `smalltalk', `sql',
-`svg', `swift', `tcl', `tex', `text', `tiff', `Tiff',
+`rust', `scala', `scheme', `seed7', `shell', `Shell', `smalltalk',
+`sql', svg', `swift', `tcl', `tex', `text', `tiff', `Tiff',
 `tt', `typescript', `verilog', `vhdl', `vim', `xml', `Xml',
 `yacc', `yaml', `zig'.
 .TP
